--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <title>Acto día del maestro - ITR 9-09-22</title>
     </head>
     <body>
-        <h1>Hola marciano!</h1>
+        <h1>Hola querdio marciano!</h1>
     </body>
 </html>
