--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <title>Acto día del maestro - ITR 9-09-22</title>
     </head>
     <body>
-        <h1>Hola querdio marciano!</h1>
+        <h1>Hola querido marciano!</h1>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
+        <script src=""></script>
     </body>
 </html>
