--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
-        <script src=""></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
